# refinery

./: .gitignore  README.md  pyproject.toml
Markify/: README.md  app.py  requirements.txt
Markify/templates/: index.html
Redactor/: .gitignore  README.md  pyproject.toml
Redactor/src/redactor/: __init__.py  __main__.py  cli.py  email_format.py  engine.py  extract.py  formats.py  mapping.py  pandoc_render.py  recognizers.py  render.py  web.py
Redactor/src/redactor/static/: app.js  index.html  style.css
Redactor/tests/: test_email_format.py  test_engine.py  test_extract.py  test_formats.py  test_mapping.py  test_pandoc_render.py  test_render.py  test_web.py
refinery/: __init__.py  __main__.py  cli.py  email_format.py  engine.py  extract.py  formats.py  pandoc_render.py  render.py  web.py
refinery/static/: app.js  index.html  style.css
