[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refinery"
version = "0.1.0"
description = "Distill documents into a chosen format, optionally redacted of PII/PHI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    # Redaction stack
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "faker>=24.0.0",
    "spacy>=3.7.0",
    # Input formats
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "mammoth>=1.6.0",
    "markdownify>=0.11.6",
    "extract-msg>=0.48.0",
    # Output rendering
    "reportlab>=4.0.0",
    "pypandoc>=1.13",
    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
refinery = "refinery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["refinery"]

[tool.hatch.build.targets.wheel.force-include]
"refinery/static" = "refinery/static"
