[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactor"
version = "0.1.0"
description = "Redact PII/PHI from documents and replace with consistent fakes before sending to AIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "faker>=24.0.0",
    "spacy>=3.7.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "extract-msg>=0.48.0",
    "reportlab>=4.0.0",
    "pypandoc>=1.13",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
redactor = "redactor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/redactor"]

[tool.hatch.build.targets.wheel.force-include]
"src/redactor/static" = "redactor/static"
